apps/pihole/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: http
      port: 8080
      targetPort: http
